[package]
name = "icp-cli-network-launcher"
version = "10.0.0+97ad9167"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
ic_principal = "0.1.1"
notify = "8.2.0"
pocket-ic = { git = "https://github.com/dfinity/ic", rev = "97ad9167816c28cf91ed76fece6c6a04a77d7d89" }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
